# paintDetect

./: .full.py.swp  .gitignore  CLAUDE.md  LICENSE  MODEL_CARD.md  README.md  batch_predict.ipynb  bee_angle.py  current_models.py  dataset_summary.txt  dataset_summary_refresh.sh  eval_masks.ipynb  full_pytorch.ipynb  maskCrop.py  mask_summary.ipynb  pyproject.toml  requirements.txt  segmentation.py  test.sh  utils.py
.ipynb_checkpoints/: full-checkpoint.ipynb  full-checkpoint.py  full_keras-checkpoint.ipynb
Pytorch-UNet/: UNet_segmentation_train_config.yml  evaluate.py  testing_training.ipynb  train.py  train_and_eval.py
Pytorch-UNet/.ipynb_checkpoints/: train-checkpoint.py
Pytorch-UNet/unet/: unet_model.py
Pytorch-UNet/utils/: data_loading.py  dice_score.py
archive/: 51loader.py  folder_display.py  hsv_investigate.py  label_me_data_loading
archive/old/: full_keras.ipynb  predict_on_training.sh
configs/: unet_segmentation.yml
docs/: USAGE.md
models/: thorax_segmentation_best_run_20230526_003438.pth
notebooks/: batch_predict.ipynb
old/: full.ipynb
src/paintdetect/: __init__.py  cli.py  config.py  data.py  evaluate.py  inference.py  metrics.py  model.py  serialization.py  train.py  viz.py
src/paintdetect/analysis/: __init__.py  paths.py  pose.py  segmentation.py
